[package]
authors = ["Jake Goulding <jake.goulding@integer32.com>"]
name = "ui"
version = "0.1.0"
edition = "2018"

[features]
default = ['fork-bomb-prevention']
fork-bomb-prevention = []

[dependencies]
asm-cleanup = { path = "../compiler/base/asm-cleanup" }
async-trait = "0.1.83"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
dotenv = "0.15.0"
futures = "0.3.31"
octocrab = "0.42"
openssl-probe = "0.1.5"
orchestrator = { path = "../compiler/base/orchestrator" }
prometheus = "0.13.4"
regex = "1.11.1"
rusqlite = { version = "0.32.1", default-features = false, features = [
  "bundled",
] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.41", features = [
  "macros",
  "time",
  "process",
  "rt-multi-thread",
] }
tokio-util = "0.7.12"
tower-http = { version = "0.6", features = [
  "cors",
  "fs",
  "request-id",
  "set-header",
  "trace",
] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
